# 2026winter

./: ATC模型转换.txt  CANN-Kernels升级  CANN-Toolkit升级  CMakeLists.txt  JsonUtilsEx.cpp  MindSpore升级  README.md  U盘挂载.docx  build.sh  main.cpp  main.cpp.autosave  peizhi.md  windows_client.py
include/: ClientManager.h  CommandInterface.h  GlobalCollectState.h  JsonUtils.hpp  JsonUtilsEx.hpp  Logging.hpp  NetworkUtils.h  ProtocolHandler.h  RadarProcess.hpp  TCPServer.h  buildExpertLib.h  config.h
include/EMPT/: CEMCGlobalDef.h  CEMCapi.h  IQ.h  IQConverter.h  NodeDeployWrapper.h  RJBoardMsg.h  UDPInterface.h  pcie_console.h  telemetry_local.h
src/: CEMCapi.cpp  ClientManager.cpp  CommandInterface.cpp  GlobalCollectState.cpp  IQConverter.cpp  JsonUtils.cpp  JsonUtilsEx.cpp  NetworkUtils.cpp  NodeDeployWrapper.cpp  ProtocolHandler.cpp  RadarProcess.cpp  TCPServer.cpp  buildExpertLib.cpp  pcie_console.cpp  son_pdw.cpp
